--- a/index.html
+++ b/index.html
@@ -50,14 +50,25 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">الرئيسية</a>
                         </li>
-                        <li class="nav-item dropdown dropdown-has-sub-dropdowns" id="main-dropdown">
-                            <a class="nav-link " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <li class="nav-item dropdown dropdown-main" id="main-dropdown">
+                            <a class="nav-link" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 من نحن
                             </a>
                             <ul class="dropdown-menu py-0" aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);right: 0px;">
                                 <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="about.html" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> بدايتنا</a></li>
                                 <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> رؤيتنا ورسالتنا</a></li>
-                                <li class="text-end py-1 dropdown dropdown-sub">
+
+                                <li class="text-end py-1 border-bottom dropdown dropdown-sub" id="dropdown-sub-1" style="border-color:var(--main-color)!important;">
+                                    <a class="dropdown-item" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> قصة حياتنا</a>
+                                    <ul class="dropdown-menu py-0"  aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);">
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                    </ul>
+                                </li>
+                                <li class="text-end py-1 dropdown dropdown-sub" id="dropdown-sub-2">
                                     <a class="dropdown-item" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> قصة حياتنا</a>
                                     <ul class="dropdown-menu py-0" aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);">
                                         <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
@@ -69,6 +80,39 @@
                                 </li>
                             </ul>
                         </li>
+
+                        <li class="nav-item dropdown dropdown-main" id="main-dropdown-2">
+                            <a class="nav-link" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                تعرف علينا 
+                            </a>
+                            <ul class="dropdown-menu py-0" aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);right: 0px;">
+                                <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="about.html" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> بدايتنا</a></li>
+                                <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> رؤيتنا ورسالتنا</a></li>
+
+                                <li class="text-end py-1 border-bottom dropdown dropdown-sub" id="dropdown-sub-12" style="border-color:var(--main-color)!important;">
+                                    <a class="dropdown-item" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> قصة حياتنا</a>
+                                    <ul class="dropdown-menu py-0"  aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);">
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                    </ul>
+                                </li>
+                                <li class="text-end py-1 dropdown dropdown-sub" id="dropdown-sub-22">
+                                    <a class="dropdown-item" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> قصة حياتنا</a>
+                                    <ul class="dropdown-menu py-0" aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);">
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+
+
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">خدماتنا</a>
                         </li>
